Added grids witch 'tryptyk'

--- a/stories.html
+++ b/stories.html
@@ -48,6 +48,8 @@
 
         <span></span>
 
+        <!-- ----- -->
+
         <div id="som-in-time" class="cont-h1">
             <img src="./images/backimg.gif">
             <h1>Somewhere in time</h1>
@@ -167,7 +169,7 @@
             </div>
             <div id="txt3-1" class="cont-img txt-center  ">
                 <img class="img-ver relative" src="./images/backimg5.gif">
-                <p class="txt-ver marker txt-xxxl">A moment for the past</p>
+                <p class="txt-ver marker txt-xxxl">A moment from the past</p>
             </div>
             <div id="txt3-2" class="cont-img">
                 <img class="img-ver relative" src="./images/transp-ver.gif">
@@ -182,10 +184,143 @@
 
         </div>
 
+        <!-- ----- -->
+
         <div id="long-way-roots" class="cont-h1">
             <img src="./images/backimg.gif">
             <h1>A long way to roots</h1>
         </div>
+
+        <!-- Container GRID-AREA-4-->
+
+        <div class="cont-art grid-area-4">
+            <div id=big4 class="cont-img">
+                <img class="underlay-img img-big-ver" src="./images/a-geller-art-4b.gif">
+                <img class="overlay-img img-big-ver" src="./images/transp-big.gif">
+            </div>
+            <div id="long4" class="cont-img">
+                <img class="underlay-img img-hor-long" src="./images/a-geller-art-4l.gif">
+                <img class="overlay-img img-hor-long" src="./images/transp-hor-long.gif">
+            </div>
+            <div id="hor4-1" class="cont-img">
+                <img class="underlay-img img-hor" src="./images/a-geller-art-4h.gif">
+                <img class="overlay-img img-hor" src="./images/transp-hor.gif">
+            </div>
+            <div id="ver4-1" class="cont-img">
+                <img class="underlay-img img-ver" src="./images/a-geller-art-4c.gif">
+                <img class="overlay-img img-ver" src="./images/transp-ver.gif">
+            </div>
+            <div id="ver4-2" class="cont-img">
+                <img class="underlay-img img-ver" src="./images/a-geller-art-4d.gif">
+                <img class="overlay-img img-ver" src="./images/transp-ver.gif">
+            </div>
+            <div id="txt4-1" class="cont-img txt-center  ">
+                <img class="img-ver relative" src="./images/backimg5.gif">
+                <p class="txt-ver marker txt-xxxl">Around the bend</p>
+            </div>
+            <div id="txt4-2" class="cont-img">
+                <img class="img-ver relative" src="./images/transp-ver.gif">
+                <p class="txt-ver txt-xxl-ital">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. </p>
+            </div>
+            <div id="txt4-3" class="cont-img">
+                <img class="img-hor relative" src="./images/transp-hor.gif">
+                <p class="txt-ver txt-xl courier">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+                    deserunt mollit anim id est laborum."</p>
+            </div>
+        </div>
+
+        <!-- Container GRID-AREA-5-->
+
+        <div class="cont-art grid-area-5">
+            <div id=big5 class="cont-img">
+                <img class="underlay-img img-big-ver" src="./images/a-geller-art-5b.gif">
+                <img class="overlay-img img-big-ver" src="./images/transp-big.gif">
+            </div>
+            <div id="long5" class="cont-img">
+                <img class="underlay-img img-hor-long" src="./images/a-geller-art-5l.gif">
+                <img class="overlay-img img-hor-long" src="./images/transp-hor-long.gif">
+            </div>
+            <div id="hor5-1" class="cont-img">
+                <img class="underlay-img img-hor" src="./images/a-geller-art-5h.gif">
+                <img class="overlay-img img-hor" src="./images/transp-hor.gif">
+            </div>
+             <div id="ver5-1" class="cont-img">
+                <img class="underlay-img img-ver" src="./images/a-geller-art-5c.gif">
+                <img class="overlay-img img-ver" src="./images/transp-ver.gif">
+            </div>
+            <div id="ver5-2" class="cont-img">
+                <img class="underlay-img img-ver" src="./images/a-geller-art-5d.gif">
+                <img class="overlay-img img-ver" src="./images/transp-ver.gif">
+            </div>
+            <div id="txt5-1" class="cont-img txt-center  ">
+                <img class="img-ver relative" src="./images/backimg5.gif">
+                <p class="txt-ver marker txt-xxxl">The first one and the last one trip.</p>
+            </div>
+            <div id="txt5-2" class="cont-img">
+                <img class="img-ver relative" src="./images/transp-ver.gif">
+                <p class="txt-ver txt-xxl-ital">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. </p>
+            </div>
+            <div id="txt5-3" class="cont-img">
+                <img class="img-hor relative" src="./images/transp-hor.gif">
+                <p class="txt-ver txt-xl courier">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+                    deserunt mollit anim id est laborum."</p>
+            </div>
+
+
+        </div>
+
+        <!-- Container GRID-AREA-6-->
+
+        <div class="cont-art grid-area-6">
+            <div id=big6 class="cont-img">
+                <img class="underlay-img img-big-ver" src="./images/a-geller-art-6b.gif">
+                <img class="overlay-img img-big-ver" src="./images/transp-big.gif">
+            </div>
+            <div id="long6" class="cont-img">
+                <img class="underlay-img img-hor-long" src="./images/a-geller-art-6l.gif">
+                <img class="overlay-img img-hor-long" src="./images/transp-hor-long.gif">
+            </div>
+            <div id="hor6-1" class="cont-img">
+                <img class="underlay-img img-hor" src="./images/a-geller-art-6h.gif">
+                <img class="overlay-img img-hor" src="./images/transp-hor.gif">
+            </div>
+             <div id="ver6-1" class="cont-img">
+                <img class="underlay-img img-ver" src="./images/a-geller-art-6c.gif">
+                <img class="overlay-img img-ver" src="./images/transp-ver.gif">
+            </div>
+            <div id="ver6-2" class="cont-img">
+                <img class="underlay-img img-ver" src="./images/a-geller-art-6d.gif">
+                <img class="overlay-img img-ver" src="./images/transp-ver.gif">
+            </div>
+            <div id="txt6-1" class="cont-img txt-center  ">
+                <img class="img-ver relative" src="./images/backimg5.gif">
+                <p class="txt-ver marker txt-xxxl">Childhood</p>
+            </div>
+            <div id="txt6-2" class="cont-img">
+                <img class="img-hor relative" src="./images/transp-hor.gif">
+                <p class="txt-ver txt-xl courier">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                    nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                    dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+                    deserunt mollit anim id est laborum."</p>
+            </div>
+            <div id="txt6-3" class="cont-img">
+                <img class="img-ver relative" src="./images/transp-ver.gif">
+                <p class="txt-ver txt-xxl-ital">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                    incididunt ut labore et dolore magna aliqua. </p>
+            </div>
+
+        </div>
+
+
 
         <div id="slav-blood" class="cont-h1">
             <img src="./images/backimg.gif">
