--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     If You don`t have much time, go directly to the section with my <a class="ins-link no-dec-blc" href="./artworks.html">ARTWORKS</a>.<br>
                     However, if You want to get to know me better, go to <a class="ins-link no-dec-blc" href="./mystory.html">MY STORY</a>.<br>
                     <br>
-                    *** Unfortunately this website isn't finished yet. Please visit me later. ***</p>
+                    *** Unfortunately this website isn't finished yet. Please keep it in mind or visit me later. ***</p>
             </div>
         </div>
 
