Added elevator, fixed header, some fixes in jsfile

--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="scripts.js"></script>
     </head>
     <header>
-        <div class="container-head"></div>
+        <div class="container-head">
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
                 <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
@@ -21,13 +21,14 @@
                 <il><a class="no-dec-blc" href="./stories.html">STORIES</a></nav>
                 <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
                 <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
-            </ul>         
+            </ul>     
+        </div>      
     </header>
     <body>
         <div class = "container-me backg2">
-            <div class="portrait"><img src="./images/me.gif"></div>
+            <div class="portrait"><img src="./images/me3.gif"></div>
             <div class="cloud">
-                <img src="./images/cloud.gif">
+                <img src="./images/cloud-big.gif">
                 <p class="text-field txt-xxl-ital">I am so sorry, but this page isn't finished yet. Please, come back later.</p>
             </div>
         </div>
