--- a/join.html
+++ b/join.html
@@ -12,7 +12,7 @@
         <script type="text/javascript" src="scripts.js"></script>
     </head>
     <header>
-        <div class="container-head"></div>
+        <div class="container-head">
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
                 <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
@@ -21,7 +21,8 @@
                 <il><a class="no-dec-blc" href="./stories.html">STORIES</a></nav>
                 <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
                 <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
-            </ul>        
+            </ul>     
+        </div>      
     </header>
     <body>
             <div class = "container-me backg2">
