--- a/mystory.html
+++ b/mystory.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="scripts.js"></script>
     </head>
     <header>
-        <div class="container-head"></div>
+        <div class="container-head">
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
                 <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
@@ -22,7 +22,8 @@
                 <il><a class="no-dec-blc" href="./stories.html">STORIES</a></nav>
                 <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
                 <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
-            </ul>         
+            </ul>     
+        </div>      
     </header>
 
     <body>
@@ -31,7 +32,7 @@
             <div class="portrait"><img src="./images/michal.gif"></div>
             <div class="portrait"><img src="./images/me.gif"></div>
             <div class="cloud">
-                <img src="./images/cloud.gif">
+                <img src="./images/cloud-big.gif">
                 <p class= "text-field txt-xxl-ital">Hello! I am Agnieszka. My head is full of ideas. For years I 
                     I do a lot of different things, but here I want to show you my drawings. 
                     I want to invite you to my world. You have to know that I wouldn't be here without the support of my friend Michal. 
@@ -53,12 +54,12 @@
                 <img class="small-cloud" src="./images/cloud.gif">
                 <p id="text-field-small" class="text-field-small txt-xxl-ital">Michal is missing. Please help me find him.</p>
             </div>
-            <button id="england"><img class ="close" src="./images/doors4open.gif"></button>
-            <button id="american"><img class="close" src="./images/doors8.gif"></button>
-            <button id="classic"><img class="close" src="./images/doors6open.gif"></button>
-            <button id="stone"><img class="close" src="./images/doors3.gif"></button>
-            <button id="broken"><img class="close" src="./images/doors9open.gif"></button>
-            <button id="wc" class="open"><img class="close" src="./images/doors2open2.gif"></button>
+            <button class="doors" id="england"><img class ="close" src="./images/doors4open.gif"></button>
+            <button class="doors" id="american"><img class="close" src="./images/doors8.gif"></button>
+            <button class="doors" id="classic"><img class="close" src="./images/doors6open.gif"></button>
+            <button class="doors" id="stone"><img class="close" src="./images/doors3.gif"></button>
+            <button class="doors" id="broken"><img class="close" src="./images/doors9open.gif"></button>
+            <button class="doors" id="wc" class="open"><img class="close" src="./images/doors2open2.gif"></button>
             <!-- button #wc is displayed but only with background and hover. "Click" starts function show: #wc is disabled, 
             #wccount is enabled, timer starts (10s), buttons #green and #red appears. After 10s or click on buttons #green or #red:
             #wccount is disabled, #wc and #wc.img is enabled.-->
@@ -67,8 +68,8 @@
                 <button class="btn" id="red">Cut red</button>
                 <button class="btn" id="green">Cut green</button>
             </div>
-            <button id="david"><img class="close" src="./images/doors5open.gif"></button>
-            <button id="twinp"><img class="close" src="./images/doors1open.gif"></button>
+            <button class="doors" id="david"><img class="close" src="./images/doors5open.gif"></button>
+            <button class="doors" id="twinp"><img class="close" src="./images/doors1open.gif"></button>
             <div id="cloud-with-text2" >
                 <img class="small-cloud" src="./images/cloud.gif">
                 <p id="text-field-small2" class="text-field-small txt-xxl-ital">Please, please, please help me! We have to find him!</p>
