--- a/stories.html
+++ b/stories.html
@@ -16,7 +16,7 @@
         <script type="text/javascript" src="scripts.js"></script>
     </head>
     <header>
-        <div class="container-head"></div>
+        <div class="container-head">
             <img class="headimg" src="./images/headcol2.gif">
             <ul class="nav">
                 <il><a class="no-dec-blc" href="./index.html">HOME</a></nav>
@@ -25,12 +25,13 @@
                 <il><a class="no-dec-blc" href="./stories.html">STORIES</a></nav>
                 <il><a class="no-dec-blc" href="./mystory.html">MY STORY</a></nav>
                 <il><a class="no-dec-blc" href="./contact.html">CONTACT</a></nav>
-            </ul>         
+            </ul>     
+        </div>      
     </header>
 
     <body>
         <div class = "container-me backg2">
-            <div class="portrait"><img src="./images/me.gif"></div>
+            <div class="portrait"><img src="./images/me3.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud-big.gif">
                 <p class="text-field txt-xxl-ital">I am happy to see You here! <br> I want to show You my drawings and related to them stories enriched with details and animations.
