JS file fixed again. David-Interval removed.

--- a/mystory.html
+++ b/mystory.html
@@ -28,16 +28,18 @@
 
     <body>
     <!-- ABOUT ME -->
-        <div class = "container-me-michal">
-            <div class="portrait"><img src="./images/michal.gif"></div>
-            <div class="portrait"><img src="./images/me.gif"></div>
+        <div class = "container-me backg1">
+            <div class="portrait"><img src="./images/meandmichal.gif"></div>
             <div class="cloud">
                 <img src="./images/cloud-big.gif">
-                <p class= "text-field txt-xxl-ital">Hello! I am Agnieszka. My head is full of ideas. For years I 
-                    I do a lot of different things, but here I want to show you my drawings. 
-                    I want to invite you to my world. You have to know that I wouldn't be here without the support of my friend Michal. 
+                <p class="text-field txt-xxl-ital">Hello! I am Agnieszka. <br> My head is full of ideas and here I want to show you my drawings and artistic ideas. 
+                    I want to invite you to my world. <br>
+                    <br>
+                    You have to know that I wouldn't be here without the support of my friend Michal. 
                     However, there is a problem with Michal. Michal is missing...<br>
-                    I am so sorry, but this page isn't finished yet. Please, come back later.</p>
+                    <br>
+                    *** I am so sorry, but this page isn't finished yet. Please, come back later. ***
+                </p>
             </div>
         </div>
 
